--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta charset="utf-8">
         <style>
         </style>
         <script src="main.js"></script>
+        <script src="resources/Chart.bundle.js"</script>
+        
     </head>
     <body>
         <div id="content" class="content">
+            <div id="top-bar">
+            </div>
             <div id="canvas_holder">
             </div>
-        
         </div>
     </body>
 </html>
