started work on place suggestions

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <style>
         </style>
         <script src="main.js"></script>
-        <script src="resources/Chart.bundle.js"</script>
-        
+        <script src="resources/Chart.bundle.js"></script>
     </head>
     <body>
         <div id="content" class="content">
             <div id="top-bar">
+                <div id="search-bar">
+                    <input id="search-field" type="text" list="places">
+                    <datalist id="places"></datalist>
+                    <button type="button"></button>
+                </div>
             </div>
             <div id="canvas_holder">
             </div>
