added places search suggestions

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <div id="content" class="content">
             <div id="top-bar">
                 <div id="search-bar">
-                    <input id="search-field" type="text" list="places">
-                    <datalist id="places"></datalist>
-                    <button type="button"></button>
+                    <input id="fld_search" type="text" list="places">
+                    <div id="wrp_datalist">
+                        <datalist id="places"></datalist>
+                    </div>
+                    <button id="btn_confirm" type="button">OK</button>
                 </div>
             </div>
             <div id="canvas_holder">
