graph visualization test

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 </div>
             </div>
             <div id="canvas_holder">
+                <canvas id="graph" class="graph-canvas"></canvas>
             </div>
         </div>
     </body>
