added graph types and settings

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     <div id="wrp_datalist">
                         <datalist id="places"></datalist>
                     </div>
+                    <select id="met_param">
+                    </select>
                     <button id="btn_confirm" type="button">OK</button>
                 </div>
             </div>
