--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
         </style>
-        <script src="main.js"></script>
-        <script src="resources/Chart.bundle.js"></script>
+        <script src="resources/external/Chart.bundle.js"></script>
+        <script src="resources/includes/functions.js"></script>
+        <script src="resources/includes/main.js"></script>
     </head>
     <body>
         <div id="content" class="content">
