added forecast lenght selection

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                     </div>
                     <select id="met_param" class="met-param">
                     </select>
+                    <select id="met_lenght" class="met-lenght">
+                        <option value="12">12h</option>
+                        <option value="24" selected>24h</option>
+                        <option value="48">48h</option>
+                        <option value="72">72h</option>
+                        <option value="1000">N/A</option>
+                    </select>
                 </div>
             </div>
             <div id="canvas_conteiner" class="canvas-container">
