added forecast caching in backend, js tweaks

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <canvas id="graph" class="graph-canvas"></canvas>
                 </div>
             </div>
+            <span>Data source: <a href="https://api.meteo.lt/">api.meteo.lt</a></span>
         </div>
     </body>
 </html>
