moved place suggestions into frontend

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="resources/includes/main.js"></script>
     </head>
     <body>
+        <div id="load_overlay"></div>
         <div id="content" class="content">
             <div id="top_bar" class="top-bar">
                 <div id="search_bar" class="search-bar">
