Replaced search suggestions dataset to div

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <div id="search_bar" class="search-bar">
                     <input id="fld_search" class="fld-search" type="text" list="places">
                     <button id="btn_confirm" class="btn-confirm" type="button">OK</button>
-                    <div id="wrp_datalist">
-                        <datalist id="places"></datalist>
+                    <div id="places">
                     </div>
                     <select id="met_param" class="met-param">
                     </select>
