--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
         </style>
-        <script src="resources/external/Chart.bundle.js"></script>
-        <script src="resources/includes/functions.js"></script>
-        <script src="resources/includes/main.js"></script>
+        <script src="js/external/Chart.bundle.js"></script>
+        <script src="js/includes/functions.js"></script>
+        <script src="js/includes/main.js"></script>
     </head>
     <body>
         <div id="load_overlay"></div>
